testing/tests/melt/negative/expr_type_index_1.c

int f[1];

int g() {

  f[1.0f]; // `integer`

}
